--- a/app/index.html
+++ b/app/index.html
@@ -59,18 +59,18 @@ current: index
 </div>
 
 <div class="teacher-info bg-beige py-9">
-    <div class="container">
+    <div class="container position-relative d-flex">
         <div class="row">
             <div class="col-6">
-                <div class="card-img rounded-lg"></div>
+                <div class="card-img rounded-lg position-relative"></div>
             </div>
-            <div class="col-6">
+            <div class="position-absolute teacher-card col-6">
                 <div class="py-4">
                     <h3 class="text-dark-brick-red mb-1">頂尖師資、專業教學</h3>
                     <h5 class="text-brick-red">強力師資，經歷豐富，協會認證。運用引導式教學，針對不同需求的人制定專屬課程。</h5>
                 </div>
-                <ul class="teacher-card list-unstyled">
-                    <li class="bg-white d-flex align-items-center rounded-lg py-7 py-8 mb-4">
+                <ul class="list-unstyled d-flex flex-column align-items-end">
+                    <li class="bg-white teacher-card-item-lg d-flex align-items-center rounded-lg py-7 px-8 mb-4">
                         <img src="./assets/images/teacher-1.png" alt="" class="teacher-pic me-4">
                         <div class="teacher-card-body">
                             <h5 class="text-gray">Carol Tang 老師</h5>
@@ -78,14 +78,14 @@ current: index
                             <h6 class="text-gray">瑜珈讓我重新認識自己的身體，也讓我有了不一樣的人生。</h6>
                         </div>
                     </li>
-                    <li class="bg-white d-flex align-items-center rounded-lg py-4 px-6 mb-4">
+                    <li class="bg-white teacher-card-item d-flex align-items-center rounded-lg py-4 px-6 mb-4">
                         <img src="./assets/images/teacher-2.png" alt="" class="teacher-pic me-4">
                         <div class="teacher-card-body">
                             <h5 class="text-gray">Carol Tang 老師</h5>
                             <h6 class="text-gray">教學經歷 10 年</h6>
                         </div>
                     </li>
-                    <li class="bg-white d-flex align-items-center rounded-lg py-4 px-6">
+                    <li class="bg-white teacher-card-item d-flex align-items-center rounded-lg py-4 px-6">
                         <img src="./assets/images/teacher-3.png" alt="" class="teacher-pic me-4">
                         <div class="teacher-card-body">
                             <h5 class="text-gray">Carol Tang 老師</h5>
@@ -181,7 +181,7 @@ current: index
                             <h6 class="card-text text-dark-brick-red">分基礎、中級、高級可以選擇。初次至 DOYOGA 上課建議選擇此方案。</h6>
                         </div>
                         <div class="card-footer border-0 bg-transparent p-0">
-                            <a href="#" class="btn btn-brick-red text-white d-block my-auto">選擇課程</a>
+                            <a href="#" class="btn btn-brick-red text-white d-block py-2 stretched-link">選擇課程</a>
                         </div>
                     </div>
                 </div>
@@ -197,7 +197,7 @@ current: index
                             <h6 class="card-text text-dark-brick-red">分基礎、中級、高級可以選擇。想試著培養瑜珈習慣者可以選擇此方案。</h6>
                         </div>
                         <div class="card-footer border-0 bg-transparent p-0">
-                            <a href="#" class="btn btn-brick-red text-white d-block">選擇課程</a>
+                            <a href="#" class="btn btn-brick-red text-white d-block py-2 stretched-link">選擇課程</a>
                         </div>
                     </div>
                 </div>
@@ -213,7 +213,7 @@ current: index
                             <h6 class="card-text text-dark-brick-red">分基礎、中級、高級可以選擇。有長期習慣做瑜伽者建議選擇此方案。</h6>
                         </div>
                         <div class="card-footer border-0 bg-transparent p-0">
-                            <a href="#" class="btn btn-brick-red text-white d-block">選擇課程</a>
+                            <a href="#" class="btn btn-brick-red text-white d-block py-2 stretched-link">選擇課程</a>
                         </div>
                     </div>
                 </div>
@@ -246,7 +246,7 @@ current: index
                 <div class="d-flex align-items-center justify-content-between bg-white rounded-lg recommend-card">
                     <div class="user-img" style="background-image: url(./assets/images/user-2.png);"></div>
                     <div class="card-body p-0">
-                        <p class="text-dark-brick-red mb-11">Joanne Oct 17 2020</p>
+                        <p class="text-dark-brick-red mb-11">穎旻 Oct 17 2020</p>
                         <h5 class="star text-brick-red mb-11">
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
@@ -254,7 +254,7 @@ current: index
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
                         </h5>
-                        <h6 class="text-dark-brick-red">服務很好、設備優良！</h6>
+                        <h6 class="text-dark-brick-red">上課後身體健康很多</h6>
                     </div>
                 </div>
             </div>
@@ -262,7 +262,7 @@ current: index
                 <div class="d-flex align-items-center justify-content-between bg-white rounded-lg recommend-card">
                     <div class="user-img" style="background-image: url(./assets/images/user-3.png);"></div>
                     <div class="card-body p-0">
-                        <p class="text-dark-brick-red mb-11">Joanne Oct 17 2020</p>
+                        <p class="text-dark-brick-red mb-11">子琪 Oct 17 2020</p>
                         <h5 class="star text-brick-red mb-11">
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
@@ -270,7 +270,7 @@ current: index
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
                         </h5>
-                        <h6 class="text-dark-brick-red">服務很好、設備優良！</h6>
+                        <h6 class="text-dark-brick-red">上課很有趣！</h6>
                     </div>
                 </div>
             </div>
@@ -280,7 +280,7 @@ current: index
                 <div class="d-flex align-items-center justify-content-between bg-white rounded-lg recommend-card">
                     <div class="user-img" style="background-image: url(./assets/images/user-4.png);"></div>
                     <div class="card-body p-0">
-                        <p class="text-dark-brick-red mb-11">Joanne Oct 17 2020</p>
+                        <p class="text-dark-brick-red mb-11">葉子 Oct 17 2020</p>
                         <h5 class="star text-brick-red mb-11">
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
@@ -288,7 +288,7 @@ current: index
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
                         </h5>
-                        <h6 class="text-dark-brick-red">服務很好、設備優良！</h6>
+                        <h6 class="text-dark-brick-red">老師的教學很專業</h6>
                     </div>
                 </div>
             </div>
@@ -296,7 +296,7 @@ current: index
                 <div class="d-flex align-items-center justify-content-between bg-white rounded-lg recommend-card">
                     <div class="user-img" style="background-image: url(./assets/images/user-5.png);"></div>
                     <div class="card-body p-0">
-                        <p class="text-dark-brick-red mb-11">Joanne Oct 17 2020</p>
+                        <p class="text-dark-brick-red mb-11">Ray Oct 17 2020</p>
                         <h5 class="star text-brick-red mb-11">
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
@@ -304,7 +304,7 @@ current: index
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
                         </h5>
-                        <h6 class="text-dark-brick-red">服務很好、設備優良！</h6>
+                        <h6 class="text-dark-brick-red">很舒壓</h6>
                     </div>
                 </div>
             </div>
@@ -312,7 +312,7 @@ current: index
                 <div class="d-flex align-items-center justify-content-between bg-white rounded-lg recommend-card">
                     <div class="user-img" style="background-image: url(./assets/images/uset-6.png);"></div>
                     <div class="card-body p-0">
-                        <p class="text-dark-brick-red mb-11">Joanne Oct 17 2020</p>
+                        <p class="text-dark-brick-red mb-11">俊儀 Oct 17 2020</p>
                         <h5 class="star text-brick-red mb-11">
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
@@ -320,7 +320,7 @@ current: index
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
                         </h5>
-                        <h6 class="text-dark-brick-red">服務很好、設備優良！</h6>
+                        <h6 class="text-dark-brick-red">讚的！</h6>
                     </div>
                 </div>
             </div>
