立即預約 填寫資料 頁面雛形

--- a/app/reserve-class.html
+++ b/app/reserve-class.html
@@ -1,5 +1,5 @@
 ---
-title: DOYOGA - 做你的瑜珈
+title: DOYOGA - 瑜珈方案選擇
 layout: ./app/layout.ejs
 engine: ejs
 current: index
@@ -7,8 +7,8 @@ current: index
 
 <h2 class="reserve-title mt-9 mb-4 text-dark-brick-red text-center">立即預約</h2>
 
-<div class="container">
-    <div class="row justify-content-center mb-6">
+<div class="container mb-6">
+    <div class="row justify-content-center">
         <div class="col-2">
             <div class="alert bg-dark-brick-red text-white text-center rounded-lg" role="alert">選擇方案</div>
         </div>
@@ -35,7 +35,8 @@ current: index
                             <h6 class="card-text text-dark-brick-red">分基礎、中級、高級可以選擇。初次至 DOYOGA 上課建議選擇此方案。</h6>
                         </div>
                         <div class="card-footer border-0 bg-transparent p-0">
-                            <a href="#" class="btn btn-brick-red text-white d-block py-2 stretched-link">選擇課程</a>
+                            <a href="reserve-information.html"
+                                class="btn btn-brick-red text-white d-block py-2 stretched-link">選擇課程</a>
                         </div>
                     </div>
                 </div>
@@ -51,7 +52,8 @@ current: index
                             <h6 class="card-text text-dark-brick-red">分基礎、中級、高級可以選擇。想試著培養瑜珈習慣者可以選擇此方案。</h6>
                         </div>
                         <div class="card-footer border-0 bg-transparent p-0">
-                            <a href="#" class="btn btn-brick-red text-white d-block py-2 stretched-link">選擇課程</a>
+                            <a href="reserve-information.html"
+                                class="btn btn-brick-red text-white d-block py-2 stretched-link">選擇課程</a>
                         </div>
                     </div>
                 </div>
@@ -67,7 +69,8 @@ current: index
                             <h6 class="card-text text-dark-brick-red">分基礎、中級、高級可以選擇。有長期習慣做瑜伽者建議選擇此方案。</h6>
                         </div>
                         <div class="card-footer border-0 bg-transparent p-0">
-                            <a href="#" class="btn btn-brick-red text-white d-block py-2 stretched-link">選擇課程</a>
+                            <a href="reserve-information.html"
+                                class="btn btn-brick-red text-white d-block py-2 stretched-link">選擇課程</a>
                         </div>
                     </div>
                 </div>
