立即預約 預約成功 頁面雛形

--- a/app/reserve-class.html
+++ b/app/reserve-class.html
@@ -79,7 +79,7 @@ current: index
     </div>
 </div>
 
-<div class="reserve-info container text-dark-brick-red">
+<div class="notice container text-dark-brick-red">
     <h3 class="text-center mt-6 mb-3">預約須知</h3>
     <ul class="list-unstyled">
         <li class="mb-1">1. 如果有特殊體質、特殊狀況，請主動告知。</li>
