--- a/app/reserve-information.html
+++ b/app/reserve-information.html
@@ -137,7 +137,7 @@ current: index
                         placeholder="0912-345-678">
                 </div>
 
-                <a href="#" class="btn btn-dark-brick-red text-white d-block py-2 send-btn">送出</a>
+                <a href="reserve-success.html" class="btn btn-dark-brick-red text-white d-block py-2 send-btn">送出</a>
             </div>
         </div>
     </div>
