--- a/app/class-introduction.html
+++ b/app/class-introduction.html
@@ -34,3 +34,216 @@ current: index
         </div>
     </div>
 </div>
+
+<div class="class-select bg-brick-red py-3">
+    <div class="container">
+        <div class="row">
+            <div class="col-4">
+                <div class="input-group">
+                    <input type="text" class="form-control" placeholder="請輸入要搜尋的課程" aria-label="Username"
+                        aria-describedby="basic-addon1">
+                    <a href="#" class="btn btn-dark-brick-red text-white py-2 px-3">搜尋</a>
+                </div>
+            </div>
+            <div class="col">
+                <div class="dropdown">
+                    <button class="btn btn-light text-dark-brick-red dropdown-toggle" type="button"
+                        id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+                        全部課程
+                    </button>
+                    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                        <li><a class="dropdown-item" href="#">Action</a></li>
+                        <li><a class="dropdown-item" href="#">Another action</a></li>
+                        <li><a class="dropdown-item" href="#">Something else here</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="class-information mt-7 mb-9">
+    <div class="container">
+        <div class="row">
+            <div class="col-9">
+                <div class="row">
+                    <div class="col-7">
+                        <div class="card bg-transparent text-white class-card bg-cover rounded-lg mb-5"
+                            style="background-image: url(./assets/images/woman\ doing\ yoga\ beside\ wall.jpg);">
+                            <div class="card-img-overlay d-flex align-items-end">
+                                <div class="card-text p-4 mt-auto">
+                                    <h3 class="m-0">基礎 Basic</h3>
+                                    <h6 class="m-0">授課老師：Carol Tang</h6>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-5">
+                        <div class="card bg-transparent text-white class-card bg-cover rounded-lg mb-5"
+                            style="background-image: url(./assets/images/woman\ in\ black\ sports\ bra\ and\ black\ leggings\ doing\ yoga.jpg);">
+                            <div class="card-img-overlay d-flex align-items-end">
+                                <div class="card-text p-4 mt-auto">
+                                    <h3 class="m-0">艾揚格 Iyengar</h3>
+                                    <h6 class="m-0">授課老師：Kanae</h6>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-5">
+                        <div class="card bg-transparent text-white class-card bg-cover rounded-lg mb-5"
+                            style="background-image: url(./assets/images/woman\ in\ black\ sports\ bra\ and\ black\ leggings\ doing\ yoga.jpg);">
+                            <div class="card-img-overlay d-flex align-items-end">
+                                <div class="card-text p-4 mt-auto">
+                                    <h3 class="m-0">哈達 Hatha</h3>
+                                    <h6 class="m-0">授課老師：Kuzuha</h6>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-7">
+                        <div class="card bg-transparent text-white class-card bg-cover rounded-lg mb-5"
+                            style="background-image: url(./assets/images/woman\ in\ white\ tank\ top\ and\ white\ leggings\ bending\ her\ body.jpg);">
+                            <div class="card-img-overlay d-flex align-items-end">
+                                <div class="card-text p-4 mt-auto">
+                                    <h3 class="m-0">寰宇 Universal</h3>
+                                    <h6 class="m-0">授課老師：Kuzuha</h6>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-7">
+                        <div class="card bg-transparent text-white class-card bg-cover rounded-lg mb-5"
+                            style="background-image: url(./assets/images/two\ woman\ dong\ fitness\ exercise.jpg);">
+                            <div class="card-img-overlay d-flex align-items-end">
+                                <div class="card-text p-4 mt-auto">
+                                    <h3 class="m-0">雙人飛行 Arco Yoga</h3>
+                                    <h6 class="m-0">授課老師：Kuzuha、Kanae</h6>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-5">
+                        <div class="card bg-transparent text-white class-card bg-cover rounded-lg mb-5"
+                            style="background-image: url(./assets/images/woman\ doing\ yoga.jpg);">
+                            <div class="card-img-overlay d-flex align-items-end">
+                                <div class="card-text p-4 mt-auto">
+                                    <h3 class="m-0">阿斯坦加 Ashtanga</h3>
+                                    <h6 class="m-0">授課老師：Kanae</h6>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-5">
+                        <div class="card bg-transparent text-white class-card bg-cover rounded-lg mb-5"
+                            style="background-image: url(./assets/images/woman\ in\ white\ tank\ top\ and\ white\ pants\ bending\ her\ body\ by\ the\ window.jpg);">
+                            <div class="card-img-overlay d-flex align-items-end">
+                                <div class="card-text p-4 mt-auto">
+                                    <h3 class="m-0">陰陽 Yin Yang</h3>
+                                    <h6 class="m-0">授課老師：Asa Chen</h6>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-7">
+                        <div class="card bg-transparent  text-white class-card bg-cover rounded-lg mb-5"
+                            style="background-image: url(./assets/images/woman\ performing\ yoga.jpg);">
+                            <div class="card-img-overlay d-flex align-items-end">
+                                <div class="card-text p-4 mt-auto">
+                                    <h3 class="m-0">香氛 Aroma Yoga</h3>
+                                    <h6 class="m-0">授課老師：Asa Chen</h6>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-3">
+                <h5 class="text-dark-brick-red">DOYOGA 上課須知：</h5>
+                <ul class="text-dark-brick-red list-unstyled">
+                    <li class="mb-1">
+                        <h6>請攜帶適當的瑜珈墊和一條長毛巾配合課程使用。</h6>
+                    </li>
+                    <li class="mb-1">
+                        <h6>運動中請穿著有彈性、吸汗、透氣為原則的衣物，盡量穿著較貼身的運動衣，以便教練指導與自我矯正。</h6>
+                    </li>
+                    <li class="mb-1">
+                        <h6>運動中切記補充適當的水分、保持腹式呼吸，以鼻吸氣，以口呼氣為原則。</h6>
+                    </li>
+                    <li class="mb-1">
+                        <h6>運動中請保持微收小腹的原則，肩膀放鬆、頭頂向上延伸，請跟隨教練指示，配合呼吸一步步的確實練習。</h6>
+                    </li>
+                    <li class="mb-1">
+                        <h6>運動過程中若感到任何不適，請馬上停止且與老師商量討論。 若懷孕或特殊疾病請先告知。</h6>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+
+    <hr>
+
+    <h3 class="mt-7 mb-9 text-center text-dark-brick-red">師資介紹</h3>
+
+    <div class="teacher-information">
+        <div class="container">
+            <div class="row">
+                <div class="col-4">
+                    <div class="card border-0 mt-4 h-100">
+                        <div class="card-body bg-brick-red text-white px-4 pt-9 pb-4 rounded-lg position-relative">
+                            <div class="card-photo bg-cover border border-brick-red border-5"
+                                style="background-image: url(./assets/images/teacher-1.png);"></div>
+                            <h5 class="card-title mb-3 text-center">Carol Tang 老師</h5>
+                            <h6 class="card-subtitle mb-3 text-center">教學經歷 10 年</h6>
+                            <h6 class="mb-3">“因為瑜珈讓我重新認識自己的身體，也讓我有了不一樣的人生。 我希望能跟學生們分享瑜珈的好，讓大 家能藉由瑜珈看見自己的內在與潛能，
+                                並將瑜珈自然的融入自己的生活中。”</h6>
+                            <ul>
+                                <li class="mb-1">協會認證艾揚格瑜珈老師</li>
+                                <li class="mb-1">2010 年完成四年的艾揚格師資培訓</li>
+                                <li>2020 取得艾揚格瑜珈高階認證</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-4">
+                    <div class="card border-0 mt-4 h-100">
+                        <div class="card-body bg-dark-brick-red text-white px-4 pt-9 pb-4 rounded-lg position-relative">
+                            <div class="card-photo bg-cover border border-brick-red border-5"
+                                style="background-image: url(./assets/images/teacher-2.png);"></div>
+                            <h5 class="card-title mb-3 text-center">Kanae 老師</h5>
+                            <h6 class="card-subtitle mb-3 text-center">教學經歷 3 年</h6>
+                            <h6 class="mb-3">
+                                “希望每個人透過觀察，感受在在進入動作，連接陰與陽，內和外，呼和吸的方式來更了解瑜珈練習的觀點，每個​動作都帶著呼吸和順位，在平衡心理和生理的狀況下以安全和簡化的技巧進入瑜珈姿勢，帶著放鬆的心情，享受瑜珈和生命的喜悅，並樂在其​中。”
+                            </h6>
+                            <ul>
+                                <li class="mb-1">美國瑜珈聯盟 RYT200 小時師資認證</li>
+                                <li class="mb-1">自然呼吸瑜珈會館開授倒立研習</li>
+                                <li>簡善琳瑜珈會館開授倒立研習</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-4">
+                    <div class="card border-0 mt-4 h-100">
+                        <div class="card-body bg-brick-red text-white px-4 pt-9 pb-4 rounded-lg position-relative">
+                            <div class="card-photo bg-cover border border-brick-red border-5"
+                                style="background-image: url(./assets/images/teacher-3.png);"></div>
+                            <h5 class="card-title mb-3 text-center">Kuzuha 老師</h5>
+                            <h6 class="card-subtitle mb-3 text-center">教學經歷 3 年</h6>
+                            <h6 class="mb-3">“瑜珈是一種生活態度， 學習平衡不強求，堅持不放棄， 修煉心靈活在當下。”</h6>
+                            <ul>
+                                <li class="mb-1">美國瑜珈聯盟 RYT200 小時師資認證</li>
+                                <li class="mb-1">自然呼吸瑜珈會館開授倒立研習</li>
+                                <li>簡善琳瑜珈會館開授倒立研習</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
