電腦版頁面雛形

--- a/app/index.html
+++ b/app/index.html
@@ -14,8 +14,8 @@ current: index
                 <h2 class="text-gray">DOYOGA，做你的瑜珈</h2>
                 <h4 class="text-gray mb-3">多給自己一點時間享受靜謐，傾聽內心的聲音。</h4>
                 <div class="button">
-                    <a href="#" class="btn btn-beige text-gray rounded-md reserve-btn me-2">立即預約</a>
-                    <a href="#" class="btn btn-brick-red rounded-md course-btn">課程介紹</a>
+                    <a href="reserve-class.html" class="btn btn-beige text-gray rounded-md reserve-btn me-2">立即預約</a>
+                    <a href="class-introduction.html" class="btn btn-brick-red rounded-md course-btn">課程介紹</a>
                 </div>
             </div>
         </div>
@@ -60,7 +60,7 @@ current: index
 
 <div class="teacher-info bg-beige py-9">
     <div class="container position-relative d-flex">
-        <div class="row">
+        <div class="row w-100">
             <div class="col-6">
                 <div class="card-img rounded-lg position-relative"></div>
             </div>
@@ -103,7 +103,7 @@ current: index
         <div class="row">
             <div class="col-4">
                 <div class="card-img-lg bg-cover rounded-lg "
-                    style="background-image: url(./assets/images/woman\ doing\ yoga\ beside\ wall.jpg);"></div>
+                    style="background-image: url(./assets/images/carl-barcelo-nqUHQkuVj3c-unsplash.jpg);"></div>
             </div>
             <div class="col-2">
                 <div class="card-img-md bg-cover rounded-lg mb-5"
@@ -116,7 +116,7 @@ current: index
             <div class="col-5 d-flex flex-column justify-content-center">
                 <h3 class="text-dark-brick-red mb-1">舒適空間、靜心放鬆</h3>
                 <h5 class="text-brick-red mb-4">我們都渴望平靜安穩的生活，擁有一處能夠靜心的角落，安撫每天繁雜忙碌的心。</h5>
-                <a href="#" class="text-dark-brick-red introduct-btn h6">環境介紹<span><i
+                <a href="class-environment.html" class="text-dark-brick-red introduct-btn h6">環境介紹<span><i
                             class="fas fa-arrow-right fa-arrow"></i></span></a>
             </div>
         </div>
@@ -126,39 +126,42 @@ current: index
 <div class="course-introduct bg-beige py-9">
     <div class="container">
         <div class="row">
-            <div class="col-1"></div>
-            <div class="col-5 d-flex flex-column justify-content-center">
+            <div class="col-5 d-flex flex-column justify-content-center offset-md-1">
                 <h3 class="text-dark-brick-red mb-1">精心設計、課程多元</h3>
                 <h5 class="text-brick-red mb-4">教師帶領多元課程，釋放壓力，與身心常見的緊繃不適溫柔和解。</h5>
-                <a href="#" class="text-dark-brick-red introduct-btn">課程介紹<span><i
+                <a href="class-introduction.html" class="text-dark-brick-red introduct-btn">課程介紹<span><i
                             class="fas fa-arrow-right fa-arrow"></i></span></a>
             </div>
             <div class="col-5">
-                <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-                    <div class="carousel-inner">
-                        <div class="carousel-item carousel-img bg-cover active rounded-lg"
-                            style="background-image: url(./assets/images/woman\ doing\ yoga\ beside\ wall.jpg);">
+                <!-- Swiper -->
+                <div class="swiper mySwiper swiper-initialized swiper-horizontal swiper-pointer-events">
+                    <div class="swiper-wrapper" id="swiper-wrapper-211042d782ca102872" aria-live="polite"
+                        style="transition-duration: 0ms; transform: translate3d(0px, 0px, 0px);">
+                        <div class="swiper-slide swiper-slide-active bg-transparent" role="group" aria-label="1 / 4"
+                            style="margin-right: 30px;">
+                            <div class="swiper-img bg-cover rounded-lg"
+                                style="background-image: url(./assets/images/woman\ doing\ yoga\ beside\ wall.jpg);">
+                            </div>
                         </div>
-                        <div class="carousel-item carousel-img bg-cover rounded-lg "
-                            style="background-image: url(./assets/images/woman\ doing\ yoga\ beside\ wall.jpg);">
+                        <div class="swiper-slide swiper-slide-next bg-transparent" role="group" aria-label="2 / 4"
+                            style="margin-right: 30px;">
+                            <div class="swiper-img bg-cover rounded-lg"
+                                style="background-image: url(./assets/images/rawan-yasser-zQ1ypq-WHzQ-unsplash.jpg);">
+                            </div>
                         </div>
-                        <div class="carousel-item carousel-img bg-cover rounded-lg "
-                            style="background-image: url(./assets/images/woman\ in\ black\ sports\ bra\ and\ black\ leggings\ doing\ yoga.jpg);">
+                        <div class="swiper-slide bg-transparent" role="group" aria-label="3 / 4"
+                            style="margin-right: 30px;">
+                            <div class="swiper-img bg-cover rounded-lg"
+                                style="background-image: url(./assets/images/woman\ in\ black\ sports\ bra\ and\ black\ leggings\ doing\ yoga.jpg);">
+                            </div>
                         </div>
-                        <div class="carousel-item carousel-img bg-cover rounded-lg "
-                            style="background-image: url(./assets/images/woman\ in\ white\ tank\ top\ and\ white\ leggings\ bending\ her\ body.jpg);">
+                        <div class="swiper-slide bg-transparent" role="group" aria-label="4 / 4"
+                            style="margin-right: 30px;">
+                            <div class="swiper-img bg-cover rounded-lg"
+                                style="background-image: url(./assets/images/woman\ in\ white\ tank\ top\ and\ white\ leggings\ bending\ her\ body.jpg);">
+                            </div>
                         </div>
                     </div>
-                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
-                        data-bs-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Previous</span>
-                    </button>
-                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
-                        data-bs-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Next</span>
-                    </button>
                 </div>
             </div>
         </div>
@@ -326,5 +329,4 @@ current: index
             </div>
         </div>
     </div>
-</div>
 </div>
