--- a/app/class-environment.html
+++ b/app/class-environment.html
@@ -61,7 +61,7 @@ current: index
                 </div>
                 <div class="col-6">
                     <div class="card bg-transparent text-white environment-card bg-cover rounded-lg mb-5"
-                        style="background-image: url(./assets/images/white\ round\ table\ near\ brown\ wooden\ chair.jpg);">
+                        style="background-image: url(./assets/images/sittin\ people\ beside\ table\ inside\ room.jpg);">
                         <div class="card-img-overlay d-flex align-items-end">
                             <div class="card-text p-4 mt-auto">
                                 <h3 class="m-0">交誼廳</h3>
