--- a/app/reserve-class.html
+++ b/app/reserve-class.html
@@ -35,9 +35,8 @@ current: index
                             <h6 class="card-text text-dark-brick-red">分基礎、中級、高級可以選擇。初次至 DOYOGA 上課建議選擇此方案。</h6>
                         </div>
                         <div class="card-footer border-0 bg-transparent p-0">
-                            <a data-bs-toggle="collapse" href="#collapseExample1" role="button" aria-expanded="false"
-                                aria-controls="collapseExample1"
-                                class="btn btn-brick-red text-white d-block py-2 stretched-link">選擇課程</a>
+                            <a href="reserve-class-select.html" role="button"
+                                class="btn btn-dark-brick-red text-white d-block py-2 stretched-link">選擇課程</a>
                         </div>
                     </div>
                 </div>
@@ -53,9 +52,8 @@ current: index
                             <h6 class="card-text text-dark-brick-red">分基礎、中級、高級可以選擇。想試著培養瑜珈習慣者可以選擇此方案。</h6>
                         </div>
                         <div class="card-footer border-0 bg-transparent p-0">
-                            <a data-bs-toggle="collapse" href="#collapseExample2" role="button" aria-expanded="false"
-                                aria-controls="collapseExample2"
-                                class="btn btn-brick-red text-white d-block py-2 stretched-link">選擇課程</a>
+                            <a href="#" role="button"
+                                class="btn btn-dark-brick-red text-white d-block py-2 stretched-link">選擇課程</a>
                         </div>
                     </div>
                 </div>
@@ -71,269 +69,17 @@ current: index
                             <h6 class="card-text text-dark-brick-red">分基礎、中級、高級可以選擇。有長期習慣做瑜伽者建議選擇此方案。</h6>
                         </div>
                         <div class="card-footer border-0 bg-transparent p-0">
-                            <a data-bs-toggle="collapse" href="#collapseExample3" role="button" aria-expanded="false"
-                                aria-controls="collapseExample3"
-                                class="btn btn-brick-red text-white d-block py-2 stretched-link">選擇課程</a>
+                            <a href="#" role="button"
+                                class="btn btn-dark-brick-red text-white d-block py-2 stretched-link">選擇課程</a>
                         </div>
                     </div>
                 </div>
             </li>
         </ul>
-        <div class="collapse" id="collapseExample1">
-            <div class="card card-body border-0 p-0">
-                <div class="row">
-                    <div class="col-4 text-center">
-                        <h6 class="text-dark-brick-red py-6"><i class="fas fa-sort-down"></i></h6>
-                    </div>
-                </div>
-                <div class="bg-dark-brick-red px-7 pb-9 mb-7">
-                    <h3 class="text-white text-center mt-7 mb-6">選擇課程階級</h3>
-                    <div class="row">
-                        <div class="col">
-                            <a href="#">
-                                <div class="card bg-dark-brick-red border-0">
-                                    <div class="card-body bg-brick-red text-white rounded-lg p-4">
-                                        <div class="d-flex justify-content-between">
-                                            <h3 class="card-title">基礎 Basic
-                                            </h3>
-                                            <h3><i class="far fa-check-circle"></i></h3>
-                                        </div>
-                                        <div class="d-flex align-items-baseline mb-3">
-                                            <h6 class="me-2">基礎課程</h6>
-                                            <div class="badge bg-dark-brick-red text-white rounded-lg px-6 py-2">60 min
-                                            </div>
-                                        </div>
-                                        <ul class="card-text list-unstyled">
-                                            <li class="mb-1">・入體位法動作解說</li>
-                                            <li class="mb-1">・瑜珈基礎動作、順位</li>
-                                            <li class="mb-1">・適合任何階段練習者</li>
-                                        </ul>
-                                    </div>
-                                </div>
-                            </a>
-                        </div>
-                        <div class="col">
-                            <a href="#">
-                                <div class="card bg-dark-brick-red border-0">
-                                    <div class="card-body bg-brick-red text-white rounded-lg p-4">
-                                        <div class="d-flex justify-content-between">
-                                            <h3 class="card-title">中階 Intermediate
-                                            </h3>
-                                            <h3><i class="far fa-check-circle"></i></h3>
-                                        </div>
-                                        <div class="d-flex align-items-baseline mb-3">
-                                            <h6 class="me-2">艾揚格、哈達、寰宇</h6>
-                                            <div class="badge bg-dark-brick-red text-white rounded-lg px-6 py-2">60 min
-                                            </div>
-                                        </div>
-                                        <ul class="card-text list-unstyled">
-                                            <li class="mb-1">・刺激身體七個層次為核心</li>
-                                            <li class="mb-1">・結合流暢體位法練習、呼吸、觀想</li>
-                                            <li class="mb-1">・適合半年以上練習者</li>
-                                        </ul>
-                                    </div>
-                                </div>
-                            </a>
-                        </div>
-                        <div class="col">
-                            <a href="#">
-                                <div class="card bg-dark-brick-red border-0">
-                                    <div class="card-body bg-brick-red text-white rounded-lg p-4">
-                                        <div class="d-flex justify-content-between">
-                                            <h3 class="card-title">高階 Advanced
-                                            </h3>
-                                            <h3><i class="far fa-check-circle"></i></h3>
-                                        </div>
-                                        <div class="d-flex align-items-baseline mb-3">
-                                            <h6 class="me-2">阿斯坦加、陰陽</h6>
-                                            <div class="badge bg-dark-brick-red text-white rounded-lg px-6 py-2">60 min
-                                            </div>
-                                        </div>
-                                        <ul class="card-text list-unstyled">
-                                            <li class="mb-1">・充分打開身體每個部位</li>
-                                            <li class="mb-1">・顯著提升力量與柔軟度</li>
-                                            <li class="mb-1">・適合一年以上練習者</li>
-                                        </ul>
-                                    </div>
-                                </div>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <h6 class="text-dark-brick-red text-center mb-1">您選擇的是</h6>
-                <h5 class="text-dark-brick-red text-center mb-3 select-border mx-auto">首次體驗課程-基礎</h5>
-            </div>
-        </div>
-        <div class="collapse" id="collapseExample2">
-            <div class="card card-body border-0 p-0">
-                <div class="row">
-                    <div class="col-4"></div>
-                    <div class="col-4 text-center">
-                        <h6 class="text-dark-brick-red py-6"><i class="fas fa-sort-down"></i></h6>
-                    </div>
-                </div>
-                <div class="bg-dark-brick-red px-7 pb-9 mb-7">
-                    <h3 class="text-white text-center mt-7 mb-6">選擇課程階級</h3>
-                    <div class="row">
-                        <div class="col">
-                            <a href="#">
-                                <div class="card bg-dark-brick-red border-0">
-                                    <div class="card-body bg-brick-red text-white rounded-lg p-4">
-                                        <div class="d-flex justify-content-between">
-                                            <h3 class="card-title">基礎 Basic
-                                            </h3>
-                                            <h3><i class="far fa-check-circle"></i></h3>
-                                        </div>
-                                        <div class="d-flex align-items-baseline mb-3">
-                                            <h6 class="me-2">基礎課程</h6>
-                                            <div class="badge bg-dark-brick-red text-white rounded-lg px-6 py-2">60 min
-                                            </div>
-                                        </div>
-                                        <ul class="card-text list-unstyled">
-                                            <li class="mb-1">・入體位法動作解說</li>
-                                            <li class="mb-1">・瑜珈基礎動作、順位</li>
-                                            <li class="mb-1">・適合任何階段練習者</li>
-                                        </ul>
-                                    </div>
-                                </div>
-                            </a>
-                        </div>
-                        <div class="col">
-                            <a href="#">
-                                <div class="card bg-dark-brick-red border-0">
-                                    <div class="card-body bg-brick-red text-white rounded-lg p-4">
-                                        <div class="d-flex justify-content-between">
-                                            <h3 class="card-title">中階 Intermediate
-                                            </h3>
-                                            <h3><i class="far fa-check-circle"></i></h3>
-                                        </div>
-                                        <div class="d-flex align-items-baseline mb-3">
-                                            <h6 class="me-2">艾揚格、哈達、寰宇</h6>
-                                            <div class="badge bg-dark-brick-red text-white rounded-lg px-6 py-2">60 min
-                                            </div>
-                                        </div>
-                                        <ul class="card-text list-unstyled">
-                                            <li class="mb-1">・刺激身體七個層次為核心</li>
-                                            <li class="mb-1">・結合流暢體位法練習、呼吸、觀想</li>
-                                            <li class="mb-1">・適合半年以上練習者</li>
-                                        </ul>
-                                    </div>
-                                </div>
-                            </a>
-                        </div>
-                        <div class="col">
-                            <a href="#">
-                                <div class="card bg-dark-brick-red border-0">
-                                    <div class="card-body bg-brick-red text-white rounded-lg p-4">
-                                        <div class="d-flex justify-content-between">
-                                            <h3 class="card-title">高階 Advanced
-                                            </h3>
-                                            <h3><i class="far fa-check-circle"></i></h3>
-                                        </div>
-                                        <div class="d-flex align-items-baseline mb-3">
-                                            <h6 class="me-2">阿斯坦加、陰陽</h6>
-                                            <div class="badge bg-dark-brick-red text-white rounded-lg px-6 py-2">60 min
-                                            </div>
-                                        </div>
-                                        <ul class="card-text list-unstyled">
-                                            <li class="mb-1">・充分打開身體每個部位</li>
-                                            <li class="mb-1">・顯著提升力量與柔軟度</li>
-                                            <li class="mb-1">・適合一年以上練習者</li>
-                                        </ul>
-                                    </div>
-                                </div>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <h6 class="text-dark-brick-red text-center mb-1">您選擇的是</h6>
-                <h5 class="text-dark-brick-red text-center mb-3 select-border mx-auto">首次體驗課程-基礎</h5>
-            </div>
-        </div>
-        <div class="collapse" id="collapseExample3">
-            <div class="card card-body border-0 p-0">
-                <div class="row">
-                    <div class="col-8"></div>
-                    <div class="col-4 text-center">
-                        <h6 class="text-dark-brick-red py-6"><i class="fas fa-sort-down"></i></h6>
-                    </div>
-                </div>
-                <div class="bg-dark-brick-red px-7 pb-9 mb-7">
-                    <h3 class="text-white text-center mt-7 mb-6">選擇課程階級</h3>
-                    <div class="row">
-                        <div class="col">
-                            <div class="card bg-dark-brick-red border-0">
-                                <div class="card-body bg-brick-red text-white rounded-lg p-4">
-                                    <div class="d-flex justify-content-between">
-                                        <h3 class="card-title">基礎 Basic
-                                        </h3>
-                                        <h3><i class="far fa-check-circle"></i></h3>
-                                    </div>
-                                    <div class="d-flex align-items-baseline mb-3">
-                                        <h6 class="me-2">基礎課程</h6>
-                                        <div class="badge bg-dark-brick-red text-white rounded-lg px-6 py-2">60 min
-                                        </div>
-                                    </div>
-                                    <ul class="card-text list-unstyled">
-                                        <li class="mb-1">・入體位法動作解說</li>
-                                        <li class="mb-1">・瑜珈基礎動作、順位</li>
-                                        <li class="mb-1">・適合任何階段練習者</li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col">
-                            <div class="card bg-dark-brick-red border-0">
-                                <div class="card-body bg-brick-red text-white rounded-lg p-4">
-                                    <div class="d-flex justify-content-between">
-                                        <h3 class="card-title">中階 Intermediate
-                                        </h3>
-                                        <h3><i class="far fa-check-circle"></i></h3>
-                                    </div>
-                                    <div class="d-flex align-items-baseline mb-3">
-                                        <h6 class="me-2">艾揚格、哈達、寰宇</h6>
-                                        <div class="badge bg-dark-brick-red text-white rounded-lg px-6 py-2">60 min
-                                        </div>
-                                    </div>
-                                    <ul class="card-text list-unstyled">
-                                        <li class="mb-1">・刺激身體七個層次為核心</li>
-                                        <li class="mb-1">・結合流暢體位法練習、呼吸、觀想</li>
-                                        <li class="mb-1">・適合半年以上練習者</li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col">
-                            <div class="card bg-dark-brick-red border-0">
-                                <div class="card-body bg-brick-red text-white rounded-lg p-4">
-                                    <div class="d-flex justify-content-between">
-                                        <h3 class="card-title">高階 Advanced
-                                        </h3>
-                                        <h3><i class="far fa-check-circle"></i></h3>
-                                    </div>
-                                    <div class="d-flex align-items-baseline mb-3">
-                                        <h6 class="me-2">阿斯坦加、陰陽</h6>
-                                        <div class="badge bg-dark-brick-red text-white rounded-lg px-6 py-2">60 min
-                                        </div>
-                                    </div>
-                                    <ul class="card-text list-unstyled">
-                                        <li class="mb-1">・充分打開身體每個部位</li>
-                                        <li class="mb-1">・顯著提升力量與柔軟度</li>
-                                        <li class="mb-1">・適合一年以上練習者</li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <h6 class="text-dark-brick-red text-center mb-1">您選擇的是</h6>
-                <h5 class="text-dark-brick-red text-center mb-3 select-border mx-auto">首次體驗課程-基礎</h5>
-            </div>
-        </div>
     </div>
 </div>
 
-<div class="notice container text-dark-brick-red">
+<div class="notice container text-dark-brick-red" style="margin-bottom: 104px;">
     <h3 class="text-center mt-6 mb-3">預約須知</h3>
     <ul class="list-unstyled">
         <li class="mb-1">1. 如果有特殊體質、特殊狀況，請主動告知。</li>
@@ -341,12 +87,4 @@ current: index
         <li class="mb-1">3. 為維護上課品質，請遵守 DOYOGA 各項參觀規定，未遵守規定者，本公司保留謝絕入館之權利。</li>
         <li class="mb-1">4. DOYOGA 保留修改預約須知之權利，修改後的條款將公佈於本網站上，不另外個別通知。如果您繼續在本網站進行參觀預約，就表示您已經了解、並同意遵守修改後的約定條款。</li>
     </ul>
-</div>
-
-<div class="container">
-    <div class="row">
-        <div class="col-4 mt-6 mx-auto" style="margin-bottom: 104px;">
-            <a href="reserve-information.html" class="btn btn-dark-brick-red text-white d-block">繼續預約</a>
-        </div>
-    </div>
 </div>
