--- a/app/reserve-information.html
+++ b/app/reserve-information.html
@@ -27,19 +27,19 @@ current: index
     </h6>
 </div>
 
-<form class="container">
+<form class="container needs-validation" novalidate>
     <div class="row d-flex justify-content-center">
         <div class="col-4 text-gray">
             <div class="form-group mb-6">
                 <h6 class="mb-3">1. 是否接觸過瑜珈?</h6>
                 <div class="form-check form-check-inline">
                     <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1"
-                        value="option1">
+                        value="option1" required>
                     <label class="form-check-label" for="inlineRadio1">是</label>
                 </div>
                 <div class="form-check form-check-inline">
                     <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2"
-                        value="option2">
+                        value="option2" required>
                     <label class="form-check-label" for="inlineRadio2">否</label>
                 </div>
             </div>
@@ -47,27 +47,27 @@ current: index
             <div class="form-group mb-6">
                 <h6 class="mb-3">2. 想改善的生活問題?</h6>
                 <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
+                    <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1" required>
                     <label class="form-check-label me-3" for="inlineCheckbox1">肌耐力不足</label>
                 </div>
                 <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option2">
+                    <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option2" required>
                     <label class="form-check-label me-3" for="inlineCheckbox2">柔軟度不佳</label>
                 </div>
                 <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option2">
+                    <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option2" required>
                     <label class="form-check-label" for="inlineCheckbox2">壓力大</label>
                 </div>
                 <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option2">
+                    <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option2" required>
                     <label class="form-check-label me-6" for="inlineCheckbox2">姿勢不正</label>
                 </div>
                 <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option2">
+                    <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option2" required>
                     <label class="form-check-label me-3" for="inlineCheckbox2">睡眠品質差</label>
                 </div>
                 <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option2">
+                    <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option2" required>
                     <label class="form-check-label" for="inlineCheckbox2">注意力不足</label>
                 </div>
             </div>
@@ -76,23 +76,23 @@ current: index
                 <h6 class="mb-3">3. 每週累積運動量約為多少？</h6>
                 <div class="form-check form-check-inline">
                     <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1"
-                        value="option1">
+                        value="option1" required>
                     <label class="form-check-label" for="inlineRadio1">150 分鐘以上</label>
                 </div>
                 <div class="form-check form-check-inline">
                     <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2"
-                        value="option2">
+                        value="option2" required>
                     <label class="form-check-label" for="inlineRadio2">75~150 分鐘</label>
                 </div>
                 <br>
                 <div class="form-check form-check-inline">
                     <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2"
-                        value="option2">
+                        value="option2" required>
                     <label class="form-check-label" for="inlineRadio2">30~75 分鐘</label>
                 </div>
                 <div class="form-check form-check-inline">
                     <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2"
-                        value="option2">
+                        value="option2" required>
                     <label class="form-check-label" for="inlineRadio2">30 分鐘以下</label>
                 </div>
             </div>
@@ -101,7 +101,7 @@ current: index
                 <h6 class="mb-1">4. 上課預約報到日</h6>
                 <h6 class="mb-2">若還沒有確定的日期，可以等待專員與您聯絡時再做詳細的諮詢哦！</h6>
                 <div class="d-block">
-                    <input type="date">
+                    <input type="date" required>
                 </div>
             </div>
 
@@ -110,16 +110,16 @@ current: index
                 <div class="row mb-3">
                     <div class="col">
                         <label for="name" class="mb-1">姓名</label>
-                        <input type="text" class="form-control rounded-sm" placeholder="請輸入您的姓名">
+                        <input type="text" class="form-control rounded-sm" placeholder="請輸入您的姓名" required>
                     </div>
                     <div class="col">
                         <label for="name" class="mb-1">年齡</label>
-                        <input type="text" class="form-control rounded-sm" placeholder="請輸入您的年齡">
+                        <input type="text" class="form-control rounded-sm" placeholder="請輸入您的年齡" required>
                     </div>
                 </div>
                 <div class="form-group col-2 mb-3">
                     <label for="exampleFormControlSelect1" class="mb-1">性別</label>
-                    <select class="form-control" id="exampleFormControlSelect1">
+                    <select class="form-control" id="exampleFormControlSelect1" required>
                         <option>男生</option>
                         <option>女生</option>
                     </select>
@@ -128,13 +128,13 @@ current: index
                 <div class="form-group mb-3">
                     <label for="exampleInputEmail1" class="mb-1">電子信箱</label>
                     <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
-                        placeholder="email@example.com">
+                        placeholder="email@example.com" required>
                 </div>
 
                 <div class="form-group mb-6">
                     <label for="exampleInputPhone" class="mb-1">手機號碼</label>
                     <input type="tel" class="form-control" id="exampleInputPhone" aria-describedby="phoneHelp"
-                        placeholder="0912-345-678">
+                        placeholder="0912-345-678" required>
                 </div>
 
                 <a href="reserve-success.html" class="btn btn-dark-brick-red text-white d-block py-2 send-btn">送出</a>
