--- a/app/reserve-information.html
+++ b/app/reserve-information.html
@@ -101,7 +101,8 @@ current: index
                 <h6 class="mb-1">4. 上課預約報到日</h6>
                 <h6 class="mb-2">若還沒有確定的日期，可以等待專員與您聯絡時再做詳細的諮詢哦！</h6>
                 <div class="d-block">
-                    <input type="date" required>
+                    <!-- <input type="text" name="date-picker" placeholder="MM/DD/YYYY"> -->
+                    <input type="date" placeholder="MM/DD/YYYY">
                 </div>
             </div>
 
