--- a/app/class-environment.html
+++ b/app/class-environment.html
@@ -87,3 +87,102 @@ current: index
         </div>
     </div>
 </div>
+
+<div class="bg-beige">
+    <div class="container pt-7 pb-6">
+        <h3 class="text-dark-brick-red text-center mb-6">課程推薦</h3>
+        <div class="swiper mySwiper swiper-initialized swiper-horizontal swiper-pointer-events swiper-free-mode py-4">
+            <div class="swiper-wrapper" id="swiper-wrapper-9c646af6687610e98" aria-live="polite">
+                <div class="swiper-slide swiper-slide-active" role="group" aria-label="1 / 8"
+                    style="width: 255px; margin-right: 30px;">
+                    <div class="card bg-transparent border-0 rounded-lg">
+                        <div class="card-img mb-2 rounded-lg bg-cover" style="background-image: url(./assets/images/woman\ doing\ yoga\ beside\ wall.jpg); height:
+                            196px;"></div>
+                        <div>
+                            <h5 class="text-dark-brick-red m-0">基礎 Basic</h5>
+                            <h6 class="text-dark-brick-red m-0">授課老師：Carol Tang</h6>
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-slide swiper-slide-next" role="group" aria-label="2 / 8"
+                    style="width: 255px; margin-right: 30px;">
+                    <div class="card bg-transparent border-0 rounded-lg">
+                        <div class="card-img mb-2 rounded-lg bg-cover"
+                            style="background-image: url(./assets/images/rawan-yasser-zQ1ypq-WHzQ-unsplash.jpg); height: 196px;">
+                        </div>
+                        <div>
+                            <h5 class="text-dark-brick-red m-0">艾揚格 Iyengar</h5>
+                            <h6 class="text-dark-brick-red m-0">授課老師：Kanae</h6>
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-slide" role="group" aria-label="3 / 8" style="width: 255px; margin-right: 30px;">
+                    <div class="card bg-transparent border-0 rounded-lg">
+                        <div class="card-img mb-2 rounded-lg bg-cover"
+                            style="background-image: url(./assets/images/woman\ in\ black\ sports\ bra\ and\ black\ leggings\ doing\ yoga.jpg); height: 196px;">
+                        </div>
+                        <div>
+                            <h5 class="text-dark-brick-red m-0">哈達 Hatha</h5>
+                            <h6 class="text-dark-brick-red m-0">授課老師：Kuzuha</h6>
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-slide" role="group" aria-label="3 / 8" style="width: 255px; margin-right: 30px;">
+                    <div class="card bg-transparent border-0 rounded-lg">
+                        <div class="card-img mb-2 rounded-lg bg-cover"
+                            style="background-image: url(./assets/images/woman\ in\ white\ tank\ top\ and\ white\ leggings\ bending\ her\ body.jpg); height: 196px;">
+                        </div>
+                        <div>
+                            <h5 class="text-dark-brick-red m-0">寰宇 Universal</h5>
+                            <h6 class="text-dark-brick-red m-0">授課老師：Kuzuha</h6>
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-slide" role="group" aria-label="5 / 8" style="width: 255px; margin-right: 30px;">
+                    <div class="card bg-transparent border-0 rounded-lg">
+                        <div class="card-img mb-2 rounded-lg bg-cover"
+                            style="background-image: url(./assets/images/two\ woman\ dong\ fitness\ exercise.jpg); height: 196px;">
+                        </div>
+                        <div>
+                            <h5 class="text-dark-brick-red m-0">雙人飛行 Arco Yoga</h5>
+                            <h6 class="text-dark-brick-red m-0">授課老師：Kuzuha、Kanae</h6>
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-slide" role="group" aria-label="6 / 8" style="width: 255px; margin-right: 30px;">
+                    <div class="card bg-transparent border-0 rounded-lg">
+                        <div class="card-img mb-2 rounded-lg bg-cover"
+                            style="background-image: url(./assets/images/woman\ doing\ yoga.jpg); height: 196px;">
+                        </div>
+                        <div>
+                            <h5 class="text-dark-brick-red m-0">阿斯坦加 Ashtanga</h5>
+                            <h6 class="text-dark-brick-red m-0">授課老師：Kanae</h6>
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-slide" role="group" aria-label="7 / 8"
+                    style="width: 255px; height: 196px; margin-right: 30px;">
+                    <div class="card bg-transparent border-0 rounded-lg">
+                        <div class="card-img mb-2 rounded-lg bg-cover"
+                            style="background-image: url(./assets/images/woman\ in\ white\ tank\ top\ and\ white\ pants\ bending\ her\ body\ by\ the\ window.jpg); height: 196px;">
+                        </div>
+                        <div>
+                            <h5 class="text-dark-brick-red m-0">陰陽 Yin Yang</h5>
+                            <h6 class="text-dark-brick-red m-0">授課老師：Asa Chen</h6>
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-slide" role="group" aria-label="8 / 8" style="width: 255px; margin-right: 30px;">
+                    <div class="card bg-transparent border-0 rounded-lg">
+                        <div class="card-img mb-2 rounded-lg bg-cover"
+                            style="background-image: url(./assets/images/carl-barcelo-nqUHQkuVj3c-unsplash.jpg); height: 196px;">
+                        </div>
+                        <div>
+                            <h5 class="text-dark-brick-red m-0">香氛 Aroma Yoga</h5>
+                            <h6 class="text-dark-brick-red m-0">授課老師：Asa Chen</h6>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
