--- a/app/index.html
+++ b/app/index.html
@@ -129,7 +129,7 @@ current: index
             <div class="col-5 d-flex flex-column justify-content-center offset-md-1">
                 <h3 class="text-dark-brick-red mb-1">精心設計、課程多元</h3>
                 <h5 class="text-brick-red mb-4">教師帶領多元課程，釋放壓力，與身心常見的緊繃不適溫柔和解。</h5>
-                <a href="class-introduction.html" class="text-dark-brick-red introduct-btn">課程介紹<span><i
+                <a href="class-introduction.htmlㄌ" class="text-dark-brick-red introduct-btn">課程介紹<span><i
                             class="fas fa-arrow-right fa-arrow"></i></span></a>
             </div>
             <div class="col-5">
@@ -184,7 +184,8 @@ current: index
                             <h6 class="card-text text-dark-brick-red">分基礎、中級、高級可以選擇。初次至 DOYOGA 上課建議選擇此方案。</h6>
                         </div>
                         <div class="card-footer border-0 bg-transparent p-0">
-                            <a href="#" class="btn btn-brick-red text-white d-block py-2 stretched-link">選擇課程</a>
+                            <a href="reserve-class-select.html"
+                                class="btn btn-brick-red text-white d-block py-2 stretched-link">選擇課程</a>
                         </div>
                     </div>
                 </div>
