新增動畫效果

--- a/app/index.html
+++ b/app/index.html
@@ -8,12 +8,11 @@ current: index
 <div class="banner d-flex align-items-center mb-7">
     <div class="container">
         <div class="row">
-            <div class="col-1"></div>
-            <div class="col-5">
-                <h6 class="text-gray">健身輕時尚</h6>
-                <h2 class="text-gray">DOYOGA，做你的瑜珈</h2>
-                <h4 class="text-gray mb-3">多給自己一點時間享受靜謐，傾聽內心的聲音。</h4>
-                <div class="button">
+            <div class="offset-md-1 col-5">
+                <h6 class="text-gray" data-aos="fade-up">健身輕時尚</h6>
+                <h2 class="text-gray" data-aos="fade-up" data-aos-delay="200">DOYOGA，做你的瑜珈</h2>
+                <h4 class="text-gray mb-3" data-aos="fade-up" data-aos-delay="200">多給自己一點時間享受靜謐，傾聽內心的聲音。</h4>
+                <div class="button" data-aos="fade-up" data-aos-delay="400">
                     <a href="reserve-class.html" class="btn btn-beige text-gray rounded-md reserve-btn me-2">立即預約</a>
                     <a href="class-introduction.html" class="btn btn-brick-red rounded-md course-btn">課程介紹</a>
                 </div>
@@ -24,10 +23,10 @@ current: index
 
 <div class="yoga-advantage mb-9">
     <div class="container">
-        <h3 class="text-center text-dark-brick-red mb-1">感受身心，活在當下</h3>
-        <h5 class="text-center text-brick-red mb-6">DOYOGA 可以帶給你...</h5>
+        <h3 class="text-center text-dark-brick-red mb-1" data-aos="fade-up">感受身心，活在當下</h3>
+        <h5 class="text-center text-brick-red mb-6" data-aos="fade-up">DOYOGA 可以帶給你...</h5>
         <div class="row">
-            <div class="col-4">
+            <div class="col-4" data-aos="fade-up">
                 <div class="card advantage-card rounded-lg bg-cover"
                     style="background-image: url(./assets/images/photo-1593810450967-f9c42742e326.jpeg);">
                     <div class="card-body d-flex flex-column justify-content-end p-4">
@@ -36,7 +35,7 @@ current: index
                     </div>
                 </div>
             </div>
-            <div class="col-4">
+            <div class="col-4" data-aos="fade-up" data-aos-delay="200">
                 <div class="card advantage-card rounded-lg bg-cover"
                     style="background-image: url(./assets/images/photo-1593810451137-5dc55105dace.jpeg);">
                     <div class="card-body d-flex flex-column justify-content-end p-4">
@@ -45,7 +44,7 @@ current: index
                     </div>
                 </div>
             </div>
-            <div class="col-4">
+            <div class="col-4" data-aos="fade-up" data-aos-delay="400">
                 <div class="card advantage-card rounded-lg bg-cover"
                     style="background-image: url(./assets/images/photo-1599901860904-17e6ed7083a0.jpeg);">
                     <div class="card-body d-flex flex-column justify-content-end p-4">
@@ -60,7 +59,7 @@ current: index
 
 <div class="teacher-info bg-beige py-9">
     <div class="container position-relative d-flex">
-        <div class="row w-100">
+        <div class="row w-100" data-aos="fade-up">
             <div class="col-6">
                 <div class="card-img rounded-lg position-relative"></div>
             </div>
@@ -101,19 +100,21 @@ current: index
 <div class="environment-introduct py-9">
     <div class="container">
         <div class="row">
-            <div class="col-4">
+            <div class="col-4" data-aos="fade-right">
                 <div class="card-img-lg bg-cover rounded-lg "
                     style="background-image: url(./assets/images/carl-barcelo-nqUHQkuVj3c-unsplash.jpg);"></div>
             </div>
             <div class="col-2">
                 <div class="card-img-md bg-cover rounded-lg mb-5"
-                    style="background-image: url(./assets/images/white\ round\ table\ near\ brown\ wooden\ chair.jpg);">
+                    style="background-image: url(./assets/images/white\ round\ table\ near\ brown\ wooden\ chair.jpg);"
+                    data-aos="fade-left" data-aos-delay="100">
                 </div>
                 <div class="card-img-md bg-cover rounded-lg "
-                    style="background-image: url(./assets/images/woman\ in\ black\ sports\ bra\ and\ blue\ denim\ jeans\ doing\ yoga.jpg);">
+                    style="background-image: url(./assets/images/woman\ in\ black\ sports\ bra\ and\ blue\ denim\ jeans\ doing\ yoga.jpg);"
+                    data-aos="fade-left" data-aos-delay="200">
                 </div>
             </div>
-            <div class="col-5 d-flex flex-column justify-content-center">
+            <div class="col-5 d-flex flex-column justify-content-center" data-aos="fade-left" data-aos-delay="400">
                 <h3 class="text-dark-brick-red mb-1">舒適空間、靜心放鬆</h3>
                 <h5 class="text-brick-red mb-4">我們都渴望平靜安穩的生活，擁有一處能夠靜心的角落，安撫每天繁雜忙碌的心。</h5>
                 <a href="class-environment.html" class="text-dark-brick-red introduct-btn h6">環境介紹<span><i
@@ -126,13 +127,13 @@ current: index
 <div class="course-introduct bg-beige py-9">
     <div class="container">
         <div class="row">
-            <div class="col-5 d-flex flex-column justify-content-center offset-md-1">
+            <div class="col-5 d-flex flex-column justify-content-center offset-md-1" data-aos="fade-right">
                 <h3 class="text-dark-brick-red mb-1">精心設計、課程多元</h3>
                 <h5 class="text-brick-red mb-4">教師帶領多元課程，釋放壓力，與身心常見的緊繃不適溫柔和解。</h5>
                 <a href="class-introduction.htmlㄌ" class="text-dark-brick-red introduct-btn">課程介紹<span><i
                             class="fas fa-arrow-right fa-arrow"></i></span></a>
             </div>
-            <div class="col-5">
+            <div class="col-5" data-aos="fade-left">
                 <!-- Swiper -->
                 <div class="swiper mySwiper swiper-initialized swiper-horizontal swiper-pointer-events">
                     <div class="swiper-wrapper" id="swiper-wrapper-211042d782ca102872" aria-live="polite"
@@ -170,10 +171,10 @@ current: index
 
 <div class="course-select mb-9">
     <div class="container mt-7">
-        <h3 class="text-dark-brick-red text-center mb-1">方案選擇</h3>
-        <h5 class="text-brick-red text-center mb-6">DOYOGA 可以帶給你...</h5>
+        <h3 class="text-dark-brick-red text-center mb-1" data-aos="fade-up">方案選擇</h3>
+        <h5 class="text-brick-red text-center mb-6" data-aos="fade-up">DOYOGA 可以帶給你...</h5>
         <ul class="list-unstyled row">
-            <li class="col-4">
+            <li class="col-4" data-aos="fade-up">
                 <div class="card rounded-lg course-card">
                     <img class="card-img-top card-img bg-cover d-block"
                         style="background-image: url(./assets/images/woman\ in\ white\ tank\ top\ and\ white\ leggings\ bending\ her\ body.jpg);">
@@ -190,7 +191,7 @@ current: index
                     </div>
                 </div>
             </li>
-            <li class="col-4">
+            <li class="col-4" data-aos="fade-up" data-aos-delay="200">
                 <div class="card rounded-lg course-card">
                     <img class="card-img-top card-img bg-cover d-block"
                         style="background-image: url(./assets/images/woman\ performing\ yoga.jpg);">
@@ -206,7 +207,7 @@ current: index
                     </div>
                 </div>
             </li>
-            <li class="col-4">
+            <li class="col-4" data-aos="fade-up" data-aos-delay="400">
                 <div class="card rounded-lg course-card">
                     <img class="card-img-top card-img bg-cover d-block"
                         style="background-image: url(./assets/images/woman\ in\ blue\ leggings\ and\ black\ tank\ top\ doing\ yoga.jpg);">
@@ -228,9 +229,9 @@ current: index
 
 <div class="recommend bg-beige">
     <div class="container pt-7 pb-9">
-        <h3 class="text-dark-brick-red text-center mb-6">聽聽他們怎麼說</h3>
+        <h3 class="text-dark-brick-red text-center mb-6" data-aos="fade-up">聽聽他們怎麼說</h3>
         <div class="row mb-3">
-            <div class="col-4">
+            <div class="col-4" data-aos="fade-up">
                 <div class="d-flex align-items-center justify-content-between bg-white rounded-lg recommend-card">
                     <div class="user-img" style="background-image: url(./assets/images/user-1.png);"></div>
                     <div class="card-body p-0">
@@ -246,7 +247,7 @@ current: index
                     </div>
                 </div>
             </div>
-            <div class="col-4">
+            <div class="col-4" data-aos="fade-up" data-aos-delay="100">
                 <div class="d-flex align-items-center justify-content-between bg-white rounded-lg recommend-card">
                     <div class="user-img" style="background-image: url(./assets/images/user-2.png);"></div>
                     <div class="card-body p-0">
@@ -262,7 +263,7 @@ current: index
                     </div>
                 </div>
             </div>
-            <div class="col-4">
+            <div class="col-4" data-aos="fade-up" data-aos-delay="200">
                 <div class="d-flex align-items-center justify-content-between bg-white rounded-lg recommend-card">
                     <div class="user-img" style="background-image: url(./assets/images/user-3.png);"></div>
                     <div class="card-body p-0">
@@ -280,7 +281,7 @@ current: index
             </div>
         </div>
         <div class="row">
-            <div class="col-4">
+            <div class="col-4" data-aos="fade-up" data-aos-delay="300">
                 <div class="d-flex align-items-center justify-content-between bg-white rounded-lg recommend-card">
                     <div class="user-img" style="background-image: url(./assets/images/user-4.png);"></div>
                     <div class="card-body p-0">
@@ -296,7 +297,7 @@ current: index
                     </div>
                 </div>
             </div>
-            <div class="col-4">
+            <div class="col-4" data-aos="fade-up" data-aos-delay="400">
                 <div class="d-flex align-items-center justify-content-between bg-white rounded-lg recommend-card">
                     <div class="user-img" style="background-image: url(./assets/images/user-5.png);"></div>
                     <div class="card-body p-0">
@@ -312,7 +313,7 @@ current: index
                     </div>
                 </div>
             </div>
-            <div class="col-4">
+            <div class="col-4" data-aos="fade-up" data-aos-delay="500">
                 <div class="d-flex align-items-center justify-content-between bg-white rounded-lg recommend-card">
                     <div class="user-img" style="background-image: url(./assets/images/uset-6.png);"></div>
                     <div class="card-body p-0">
