--- a/app/reserve-class.html
+++ b/app/reserve-class.html
@@ -24,7 +24,7 @@ current: index
 <div class="course-select">
     <div class="container">
         <ul class="list-unstyled row">
-            <li class="col-4">
+            <li class="col-4" data-aos="fade-up">
                 <div class="card rounded-lg course-card">
                     <img class="card-img-top card-img bg-cover d-block"
                         style="background-image: url(./assets/images/woman\ in\ white\ tank\ top\ and\ white\ leggings\ bending\ her\ body.jpg);">
@@ -41,7 +41,7 @@ current: index
                     </div>
                 </div>
             </li>
-            <li class="col-4">
+            <li class="col-4" data-aos="fade-up" data-aos-delay="200">
                 <div class="card rounded-lg course-card">
                     <img class="card-img-top card-img bg-cover d-block"
                         style="background-image: url(./assets/images/woman\ performing\ yoga.jpg);">
@@ -58,7 +58,7 @@ current: index
                     </div>
                 </div>
             </li>
-            <li class="col-4">
+            <li class="col-4" data-aos="fade-up" data-aos-delay="400">
                 <div class="card rounded-lg course-card">
                     <img class="card-img-top card-img bg-cover d-block"
                         style="background-image: url(./assets/images/woman\ in\ blue\ leggings\ and\ black\ tank\ top\ doing\ yoga.jpg);">
