--- a/app/schedule.html
+++ b/app/schedule.html
@@ -9,7 +9,7 @@ current: index
 
 <div class="container mb-6">
     <div class="row">
-        <div class="col-10 mx-auto">
+        <div class="col-10 mx-auto" data-aos="fade-up">
             <div class="bg-dark-brick-red rounded-lg py-7 px-8">
                 <h5 class="text-white">2021 07 月</h5>
                 <table class="table bg-light text-dark-brick-red table-bordered border-dark-brick-red">
@@ -112,35 +112,31 @@ current: index
     </div>
 </div>
 
-<h3 class="text-gray text-center mb-6">上課須知</h3>
+<h3 class="text-gray text-center mb-6" data-aos="fade-up">上課須知</h3>
 
 <div class="container class-notice">
-    <div class="row mb-4">
-        <div class="col-2"></div>
-        <div class="col-7 d-flex align-items-center">
+    <div class="row mb-4" data-aos="fade-right">
+        <div class="offset-md-2 col-7 d-flex align-items-center">
             <h2 class="me-4 text-gray">1.</h2>
             <h6 class="py-3 px-4 border rounded-lg d-block w-100 text-dark-brick-red">空中瑜珈、香氛開放 2 天前電話預約上課。</h6>
         </div>
     </div>
-    <div class="row mb-4">
-        <div class="col-3"></div>
-        <div class="col-7 d-flex align-items-center">
+    <div class="row mb-4" data-aos="fade-left">
+        <div class="offset-md-3 col-7 d-flex align-items-center">
             <h2 class="me-4 text-gray">2.</h2>
             <h6 class="py-3 px-4 rounded-lg d-block w-100 bg-dark-brick-red text-white">如果有特殊體質、特殊狀況，請主動告知該堂教師。
             </h6>
         </div>
     </div>
-    <div class="row mb-4">
-        <div class="col-2"></div>
-        <div class="col-7 d-flex align-items-center">
+    <div class="row mb-4" data-aos="fade-right">
+        <div class="offset-md-2 col-7 d-flex align-items-center">
             <h2 class="me-4 text-gray">3.</h2>
             <h6 class="py-3 px-4 border rounded-lg d-block w-100 text-dark-brick-red">取消預約或時間異動請於預約日前一天晚間 21:00 前告知。
             </h6>
         </div>
     </div>
-    <div class="row mb-4">
-        <div class="col-3"></div>
-        <div class="col-7 d-flex align-items-center">
+    <div class="row mb-4" data-aos="fade-left">
+        <div class="offset-md-3 col-7 d-flex align-items-center">
             <h2 class="me-4 text-gray">4.</h2>
             <h6 class="py-3 px-4 rounded-lg d-block w-100 bg-dark-brick-red text-white">
                 運動過程中若感到任何不適，請馬上停止且與老師商量討論。</h6>
