--- a/app/class-environment.html
+++ b/app/class-environment.html
@@ -11,7 +11,7 @@ current: index
     <div class="row">
         <div class="col-8">
             <div class="row">
-                <div class="col">
+                <div class="col" data-aos="fade-right">
                     <div class="card bg-transparent text-white environment-card bg-cover rounded-lg mb-5"
                         style="background-image: url(./assets/images/blue\ swimming\ pool\ near\ green\ potted\ plant.jpg);">
                         <div class="card-img-overlay d-flex align-items-end">
@@ -24,7 +24,7 @@ current: index
                 </div>
             </div>
             <div class="row">
-                <div class="col-6">
+                <div class="col-6" data-aos="fade-right">
                     <div class="card bg-transparent text-white environment-card bg-cover rounded-lg mb-5"
                         style="background-image: url(./assets/images/woman\ doing\ yoga.jpg);">
                         <div class="card-img-overlay d-flex align-items-end">
@@ -35,7 +35,7 @@ current: index
                         </div>
                     </div>
                 </div>
-                <div class="col-6">
+                <div class="col-6" data-aos="fade-left">
                     <div class="card bg-transparent text-white environment-card bg-cover rounded-lg mb-5"
                         style="background-image: url(./assets/images/white\ ceramic\ sink\ near\ white\ ceramic\ sink.jpg);">
                         <div class="card-img-overlay d-flex align-items-end">
@@ -48,7 +48,7 @@ current: index
                 </div>
             </div>
             <div class="row">
-                <div class="col-6">
+                <div class="col-6" data-aos="fade-right">
                     <div class="card bg-transparent text-white environment-card bg-cover rounded-lg mb-5"
                         style="background-image: url(./assets/images/woman\ in\ black\ sports\ bra\ and\ blue\ denim\ jeans\ doing\ yoga.jpg);">
                         <div class="card-img-overlay d-flex align-items-end">
@@ -59,7 +59,7 @@ current: index
                         </div>
                     </div>
                 </div>
-                <div class="col-6">
+                <div class="col-6" data-aos="fade-left">
                     <div class="card bg-transparent text-white environment-card bg-cover rounded-lg mb-5"
                         style="background-image: url(./assets/images/sittin\ people\ beside\ table\ inside\ room.jpg);">
                         <div class="card-img-overlay d-flex align-items-end">
@@ -72,7 +72,7 @@ current: index
                 </div>
             </div>
         </div>
-        <div class="col-4">
+        <div class="col-4" data-aos="fade-left">
             <div class="card border-0 bg-beige text-dark-brick-red rounded-lg p-6">
                 <div class="card-body">
                     <h5 class="mb-3">DOYOGA 提供：</h5>
@@ -94,7 +94,7 @@ current: index
         <div class="swiper mySwiper swiper-initialized swiper-horizontal swiper-pointer-events swiper-free-mode py-4">
             <div class="swiper-wrapper" id="swiper-wrapper-9c646af6687610e98" aria-live="polite">
                 <div class="swiper-slide swiper-slide-active" role="group" aria-label="1 / 8"
-                    style="width: 255px; margin-right: 30px;">
+                    style="width: 255px; margin-right: 30px;" data-aos="fade-right">
                     <div class="card bg-transparent border-0 rounded-lg">
                         <div class="card-img mb-2 rounded-lg bg-cover" style="background-image: url(./assets/images/woman\ doing\ yoga\ beside\ wall.jpg); height:
                             196px;"></div>
@@ -105,7 +105,7 @@ current: index
                     </div>
                 </div>
                 <div class="swiper-slide swiper-slide-next" role="group" aria-label="2 / 8"
-                    style="width: 255px; margin-right: 30px;">
+                    style="width: 255px; margin-right: 30px;" data-aos="fade-right" data-aos-delay="100">
                     <div class="card bg-transparent border-0 rounded-lg">
                         <div class="card-img mb-2 rounded-lg bg-cover"
                             style="background-image: url(./assets/images/rawan-yasser-zQ1ypq-WHzQ-unsplash.jpg); height: 196px;">
@@ -117,7 +117,7 @@ current: index
                     </div>
                 </div>
                 <div class="swiper-slide" role="group" aria-label="3 / 8" style="width: 255px; margin-right: 30px;">
-                    <div class="card bg-transparent border-0 rounded-lg">
+                    <div class="card bg-transparent border-0 rounded-lg" data-aos="fade-right" data-aos-delay="200">
                         <div class="card-img mb-2 rounded-lg bg-cover"
                             style="background-image: url(./assets/images/woman\ in\ black\ sports\ bra\ and\ black\ leggings\ doing\ yoga.jpg); height: 196px;">
                         </div>
@@ -127,8 +127,8 @@ current: index
                         </div>
                     </div>
                 </div>
-                <div class="swiper-slide" role="group" aria-label="3 / 8" style="width: 255px; margin-right: 30px;">
-                    <div class="card bg-transparent border-0 rounded-lg">
+                <div class="swiper-slide" role="group" aria-label="4 / 8" style="width: 255px; margin-right: 30px;">
+                    <div class="card bg-transparent border-0 rounded-lg" data-aos="fade-right" data-aos-delay="300">
                         <div class="card-img mb-2 rounded-lg bg-cover"
                             style="background-image: url(./assets/images/woman\ in\ white\ tank\ top\ and\ white\ leggings\ bending\ her\ body.jpg); height: 196px;">
                         </div>
@@ -139,7 +139,7 @@ current: index
                     </div>
                 </div>
                 <div class="swiper-slide" role="group" aria-label="5 / 8" style="width: 255px; margin-right: 30px;">
-                    <div class="card bg-transparent border-0 rounded-lg">
+                    <div class="card bg-transparent border-0 rounded-lg" data-aos="fade-right" data-aos-delay="400">
                         <div class="card-img mb-2 rounded-lg bg-cover"
                             style="background-image: url(./assets/images/two\ woman\ dong\ fitness\ exercise.jpg); height: 196px;">
                         </div>
