--- a/app/class-introduction.html
+++ b/app/class-introduction.html
@@ -8,9 +8,8 @@ current: index
 <h3 class="mt-9 mb-6 text-dark-brick-red text-center">課程介紹</h3>
 
 <div class="container special-class mb-9">
-    <div class="row">
-        <div class="col-1"></div>
-        <div class="col-6">
+    <div class="row" data-aos="fade-up">
+        <div class="offset-md-1 col-6">
             <div class="card-img bg-cover rounded-lg"
                 style="background-image: url(./assets/images/photo-1540206276207-3af25c08abc4.jpeg);">
             </div>
@@ -35,7 +34,7 @@ current: index
     </div>
 </div>
 
-<div class="class-select bg-brick-red py-3">
+<div class="class-select bg-brick-red py-3" data-aos="fade-up">
     <div class="container">
         <div class="row">
             <div class="col-4">
@@ -67,7 +66,7 @@ current: index
         <div class="row">
             <div class="col-9">
                 <div class="row">
-                    <div class="col-7">
+                    <div class="col-7" data-aos="fade-up" data-aos-delay="200">
                         <a href="#" data-bs-toggle="modal" role="button" data-bs-target="#exampleModal">
                             <div class="card bg-transparent text-white class-card bg-cover rounded-lg mb-5"
                                 style="background-image: url(./assets/images/woman\ doing\ yoga\ beside\ wall.jpg);">
@@ -80,7 +79,7 @@ current: index
                             </div>
                         </a>
                     </div>
-                    <div class="col-5">
+                    <div class="col-5" data-aos="fade-up" data-aos-delay="100">
                         <a href="#">
                             <div class="card bg-transparent text-white class-card bg-cover rounded-lg mb-5"
                                 style="background-image: url(./assets/images/woman\ in\ black\ sports\ bra\ and\ black\ leggings\ doing\ yoga.jpg);">
@@ -95,7 +94,7 @@ current: index
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-5">
+                    <div class="col-5" data-aos="fade-up" data-aos-delay="100">
                         <a href="#">
                             <div class="card bg-transparent text-white class-card bg-cover rounded-lg mb-5"
                                 style="background-image: url(./assets/images/woman\ in\ black\ sports\ bra\ and\ black\ leggings\ doing\ yoga.jpg);">
@@ -108,7 +107,7 @@ current: index
                             </div>
                         </a>
                     </div>
-                    <div class="col-7">
+                    <div class="col-7" data-aos="fade-up" data-aos-delay="200">
                         <a href="#">
                             <div class="card bg-transparent text-white class-card bg-cover rounded-lg mb-5"
                                 style="background-image: url(./assets/images/woman\ in\ white\ tank\ top\ and\ white\ leggings\ bending\ her\ body.jpg);">
@@ -123,7 +122,7 @@ current: index
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-7">
+                    <div class="col-7" data-aos="fade-up" data-aos-delay="200">
                         <a href="#">
                             <div class="card bg-transparent text-white class-card bg-cover rounded-lg mb-5"
                                 style="background-image: url(./assets/images/two\ woman\ dong\ fitness\ exercise.jpg);">
@@ -136,7 +135,7 @@ current: index
                             </div>
                         </a>
                     </div>
-                    <div class="col-5">
+                    <div class="col-5" data-aos="fade-up" data-aos-delay="100">
                         <a href="#">
                             <div class="card bg-transparent text-white class-card bg-cover rounded-lg mb-5"
                                 style="background-image: url(./assets/images/woman\ doing\ yoga.jpg);">
@@ -151,7 +150,7 @@ current: index
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-5">
+                    <div class="col-5" data-aos="fade-up" data-aos-delay="100">
                         <a href="#">
                             <div class="card bg-transparent text-white class-card bg-cover rounded-lg mb-5"
                                 style="background-image: url(./assets/images/woman\ in\ white\ tank\ top\ and\ white\ pants\ bending\ her\ body\ by\ the\ window.jpg);">
@@ -164,7 +163,7 @@ current: index
                             </div>
                         </a>
                     </div>
-                    <div class="col-7">
+                    <div class="col-7" data-aos="fade-up" data-aos-delay="200">
                         <a href="#">
                             <div class="card bg-transparent  text-white class-card bg-cover rounded-lg mb-5"
                                 style="background-image: url(./assets/images/carl-barcelo-nqUHQkuVj3c-unsplash.jpg);">
@@ -179,7 +178,7 @@ current: index
                     </div>
                 </div>
             </div>
-            <div class="col-3">
+            <div class="col-3" data-aos="fade-up">
                 <h5 class="text-dark-brick-red">DOYOGA 上課須知：</h5>
                 <ul class="text-dark-brick-red list-unstyled">
                     <li class="mb-1">
@@ -214,8 +213,8 @@ current: index
                     style="padding: 40px 0 113px 0;">
                     <div class="swiper-wrapper" id="swiper-wrapper-f5510a3e65fd61cd7" aria-live="polite"
                         style="transition-duration: 0ms; transform: translate3d(0px, 0px, 0px); ">
-                        <div class="swiper-slide swiper-slide-active" role="group" aria-label="1 / 9"
-                            style="width: 350px; margin-right: 30px;">
+                        <div class="swiper-slide swiper-slide-active" role="group" aria-label="1 / 4"
+                            style="width: 350px; margin-right: 30px;" data-aos="fade-right">
                             <div class="card border-0 mt-4 h-100">
                                 <div
                                     class="card-body bg-brick-red text-white px-4 pt-9 pb-4 rounded-lg position-relative">
@@ -234,8 +233,8 @@ current: index
                                 </div>
                             </div>
                         </div>
-                        <div class="swiper-slide swiper-slide-next" role="group" aria-label="2 / 9"
-                            style="width: 350px; margin-right: 30px;">
+                        <div class="swiper-slide swiper-slide-next" role="group" aria-label="2 / 4"
+                            style="width: 350px; margin-right: 30px;" data-aos="fade-right" data-aos-delay="100">
                             <div class="card border-0 mt-4 h-100">
                                 <div
                                     class="card-body bg-dark-brick-red text-white px-4 pt-9 pb-4 rounded-lg position-relative">
@@ -254,8 +253,8 @@ current: index
                                 </div>
                             </div>
                         </div>
-                        <div class="swiper-slide" role="group" aria-label="3 / 9"
-                            style="width: 350px; margin-right: 30px;">
+                        <div class="swiper-slide" role="group" aria-label="3 / 4"
+                            style="width: 350px; margin-right: 30px;" data-aos="fade-right" data-aos-delay="300">
                             <div class="card border-0 mt-4 h-100">
                                 <div
                                     class="card-body bg-brick-red text-white px-4 pt-9 pb-4 rounded-lg position-relative">
@@ -272,8 +271,8 @@ current: index
                                 </div>
                             </div>
                         </div>
-                        <div class="swiper-slide" role="group" aria-label="4 / 9"
-                            style="width: 350px; margin-right: 30px;">
+                        <div class="swiper-slide" role="group" aria-label="4 / 4"
+                            style="width: 350px; margin-right: 30px;" data-aos="fade-right" data-aos-delay="400">
                             <div class="card border-0 mt-4 h-100">
                                 <div
                                     class="card-body bg-brick-red text-white px-4 pt-9 pb-4 rounded-lg position-relative">
