--- a/app/contact.html
+++ b/app/contact.html
@@ -12,21 +12,22 @@ current: index
         <div class="col-7">
             <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3614.5977642652488!2d121.51404261460945!3d25.047721083965957!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xece39c57ea7e4e12!2z5o236YGL5Y-w5YyX6LuK56uZ56uZ!5e0!3m2!1szh-TW!2stw!4v1630419560081!5m2!1szh-TW!2stw"
-                width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-                class="mb-4 rounded-lg"></iframe>
+                width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" class="mb-4 rounded-lg"
+                data-aos="fade-right"></iframe>
             <div class="text-dark-brick-red row">
                 <div class="col-6">
-                    <h4 class="mb-2">DOYOGA 教室位置</h4>
-                    <h6 class="mb-2">高雄市苓雅區北信街 23 號 2 樓</h6>
-                    <h6>如何前往：</h6>
-                    <h6 class="mb-4">1. 搭乘捷運：紅線到正義站 3 號出口，延正義路方向至北信街交叉口即可。</h6>
-                    <h6 class="mb-4">2. 搭乘公車：搭這些公車都可以抵達正義站 24B 25 33 50 76 77 77區 100</h6>
-                    <h6>3. 開車前往北信街 32 號，教室旁有專屬停車場可以使用。</h6>
+                    <h4 class="mb-2" data-aos="fade-up">DOYOGA 教室位置</h4>
+                    <h6 class="mb-2" data-aos="fade-up" data-aos-delay="200">高雄市苓雅區北信街 23 號 2 樓</h6>
+                    <h6 data-aos="fade-up" data-aos-delay="200">如何前往：</h6>
+                    <h6 class="mb-4" data-aos="fade-up" data-aos-delay="200">1. 搭乘捷運：紅線到正義站 3 號出口，延正義路方向至北信街交叉口即可。</h6>
+                    <h6 class="mb-4" data-aos="fade-up" data-aos-delay="200">2. 搭乘公車：搭這些公車都可以抵達正義站 24B 25 33 50 76 77
+                        77區 100</h6>
+                    <h6 data-aos="fade-up" data-aos-delay="200">3. 開車前往北信街 32 號，教室旁有專屬停車場可以使用。</h6>
                 </div>
             </div>
         </div>
         <div class="col-5">
-            <div class="bg-beige rounded-lg p-6 text-dark-brick-red">
+            <div class="bg-beige rounded-lg p-6 text-dark-brick-red" data-aos="fade-left">
                 <h5 class="mb-4">意見回饋&問題詢問</h5>
                 <div class="mb-3">
                     <label for="exampleFormControlInput1" class="form-label">姓名</label>
