--- a/app/reserve-class-select.html
+++ b/app/reserve-class-select.html
@@ -83,9 +83,9 @@ current: index
                 </div>
             </div>
             <div class="bg-dark-brick-red px-7 pb-9 mb-7">
-                <h3 class="text-white text-center mt-7 mb-6">選擇課程階級</h3>
+                <h3 class="text-white text-center mt-7 mb-6" data-aos="fade-up">選擇課程階級</h3>
                 <div class="row">
-                    <div class="col">
+                    <div class="col" data-aos="fade-up">
                         <a href="#">
                             <div class="card bg-dark-brick-red border-0">
                                 <div
@@ -109,7 +109,7 @@ current: index
                             </div>
                         </a>
                     </div>
-                    <div class="col">
+                    <div class="col" data-aos="fade-up" data-aos-delay="200">
                         <a href="#">
                             <div class="card bg-dark-brick-red border-0">
                                 <div class="card-body bg-brick-red text-white rounded-lg p-4">
@@ -132,7 +132,7 @@ current: index
                             </div>
                         </a>
                     </div>
-                    <div class="col">
+                    <div class="col" data-aos="fade-up" data-aos-delay="400">
                         <a href="#">
                             <div class="card bg-dark-brick-red border-0">
                                 <div class="card-body bg-brick-red text-white rounded-lg p-4">
