--- a/app/reserve-success.html
+++ b/app/reserve-success.html
@@ -21,7 +21,7 @@ current: index
     </div>
 </div>
 
-<h1 class="text-dark-brick-red text-center mb-4"><i class="far fa-check-circle"></i></h1>
+<h1 class="text-dark-brick-red text-center mb-4" data-aos="zoom-in"><i class="far fa-check-circle"></i></h1>
 <h5 class="text-dark-brick-red text-center mb-6">已完成預約，以下是您的預約資訊：</h5>
 
 <div class="container">
