RWD 平板設定-未完

--- a/app/class-introduction.html
+++ b/app/class-introduction.html
@@ -61,7 +61,7 @@ current: index
     </div>
 </div>
 
-<div class="class-information mt-7 mb-9">
+<div class="class-information mt-7">
     <div class="container">
         <div class="row">
             <div class="col-9">
@@ -203,7 +203,7 @@ current: index
 
     <hr>
 
-    <h3 class="mt-7 mb-9 text-center text-dark-brick-red">師資介紹</h3>
+    <h3 class="mt-7 mb-7 text-center text-dark-brick-red">師資介紹</h3>
 
     <div class="teacher-information">
         <div class="container">
