--- a/app/reserve-information.html
+++ b/app/reserve-information.html
@@ -9,13 +9,13 @@ current: index
 
 <div class="container mb-6">
     <div class="row justify-content-center">
-        <div class="col-2">
-            <div class="alert bg-beige text-dark-brick-red text-center rounded-lg" role="alert">選擇方案</div>
+        <div class="col-3 col-lg-2">
+            <div class="alert bg-dark-brick-red text-white text-center rounded-lg" role="alert">選擇方案</div>
         </div>
-        <div class="col-2">
-            <div class="alert bg-dark-brick-red text-white text-center rounded-lg" role="alert">填寫資料</div>
+        <div class="col-3 col-lg-2">
+            <div class="alert bg-beige text-dark-brick-red text-center rounded-lg" role="alert">填寫資料</div>
         </div>
-        <div class="col-2">
+        <div class="col-3 col-lg-2">
             <div class="alert bg-beige text-dark-brick-red text-center rounded-lg" role="alert">完成預約</div>
         </div>
     </div>
@@ -29,7 +29,7 @@ current: index
 
 <form class="container needs-validation" novalidate>
     <div class="row d-flex justify-content-center">
-        <div class="col-4 text-gray">
+        <div class="col-6 col-lg-4 text-gray">
             <div class="form-group mb-6">
                 <h6 class="mb-3">1. 是否接觸過瑜珈?</h6>
                 <div class="form-check form-check-inline">
