--- a/app/class-environment.html
+++ b/app/class-environment.html
@@ -73,7 +73,7 @@ current: index
             </div>
         </div>
         <div class="col-4" data-aos="fade-left">
-            <div class="card border-0 bg-beige text-dark-brick-red rounded-lg p-6">
+            <div class="card border-0 bg-beige text-dark-brick-red rounded-lg p-3 p-lg-6">
                 <div class="card-body">
                     <h5 class="mb-3">DOYOGA 提供：</h5>
                     <h6 class="mb-1">四間教室：A、B 團體課教室、C、D 個人訓練室。</h6>
