--- a/app/reserve-class.html
+++ b/app/reserve-class.html
@@ -9,13 +9,13 @@ current: index
 
 <div class="container mb-6">
     <div class="row justify-content-center">
-        <div class="col-2">
+        <div class="col-3 col-lg-2">
             <div class="alert bg-dark-brick-red text-white text-center rounded-lg" role="alert">選擇方案</div>
         </div>
-        <div class="col-2">
+        <div class="col-3 col-lg-2">
             <div class="alert bg-beige text-dark-brick-red text-center rounded-lg" role="alert">填寫資料</div>
         </div>
-        <div class="col-2">
+        <div class="col-3 col-lg-2">
             <div class="alert bg-beige text-dark-brick-red text-center rounded-lg" role="alert">完成預約</div>
         </div>
     </div>
@@ -79,12 +79,17 @@ current: index
     </div>
 </div>
 
-<div class="notice container text-dark-brick-red" style="margin-bottom: 104px;">
-    <h3 class="text-center mt-6 mb-3">預約須知</h3>
-    <ul class="list-unstyled">
-        <li class="mb-1">1. 如果有特殊體質、特殊狀況，請主動告知。</li>
-        <li class="mb-1">2. 取消預約或時間異動請於預約日前一天晚間 21:00 前告知，預約當日請勿異動或取消，以免影響您日後再預約的個人信用及難度。</li>
-        <li class="mb-1">3. 為維護上課品質，請遵守 DOYOGA 各項參觀規定，未遵守規定者，本公司保留謝絕入館之權利。</li>
-        <li class="mb-1">4. DOYOGA 保留修改預約須知之權利，修改後的條款將公佈於本網站上，不另外個別通知。如果您繼續在本網站進行參觀預約，就表示您已經了解、並同意遵守修改後的約定條款。</li>
-    </ul>
+<div class="container text-dark-brick-red" style="margin-bottom: 104px;" data-aos="fade-up">
+    <div class="row justify-content-center">
+        <div class="col-8 col-lg-5">
+            <h3 class="text-center mt-6 mb-3">預約須知</h3>
+            <ul class="list-unstyled">
+                <li class="mb-1">1. 如果有特殊體質、特殊狀況，請主動告知。</li>
+                <li class="mb-1">2. 取消預約或時間異動請於預約日前一天晚間 21:00 前告知，預約當日請勿異動或取消，以免影響您日後再預約的個人信用及難度。</li>
+                <li class="mb-1">3. 為維護上課品質，請遵守 DOYOGA 各項參觀規定，未遵守規定者，本公司保留謝絕入館之權利。</li>
+                <li class="mb-1">4. DOYOGA 保留修改預約須知之權利，修改後的條款將公佈於本網站上，不另外個別通知。如果您繼續在本網站進行參觀預約，就表示您已經了解、並同意遵守修改後的約定條款。
+                </li>
+            </ul>
+        </div>
+    </div>
 </div>
